chore(backend): remove minor coding style issues reported by Sonar